force-app/main/default/objects/VisitReportLine__c/VisitReportLine__c.object-meta.xml
<CustomObject>
    <label>Visit Report Line</label>
    <nameField>
        <displayFormat>VRL-{0000000}</displayFormat>
        <label>Visit Report Line Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Visit Report Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>