force-app/main/default/objects/VisitReportLine__c/fields/BrandedCups__c.field-meta.xml
<CustomField>
    <fullName>BrandedCups__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Branded Cups</label>
    <type>Checkbox</type>
</CustomField>