force-app/main/default/objects/VisitReportLine__c/fields/BrandLogoonMachine__c.field-meta.xml
<CustomField>
    <fullName>BrandLogoonMachine__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Brand Logo on Machine</label>
    <type>Checkbox</type>
</CustomField>