force-app/main/default/objects/VisitReportLine__c/fields/BrandOnBeverageMenu__c.field-meta.xml
<CustomField>
    <fullName>BrandOnBeverageMenu__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Brand on Beverage Menu</label>
    <type>Checkbox</type>
</CustomField>