force-app/main/default/objects/VisitReportLine__c/fields/BrandsOnBeverageMenu__c.field-meta.xml
<CustomField>
    <fullName>BrandsOnBeverageMenu__c</fullName>
    <label>Brands on Beverage Menu</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>J.J. Darboven</fullName>
            </value>
            <value>
                <fullName>Eilles</fullName>
            </value>
            <value>
                <fullName>Mövenpick</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>