force-app/main/default/objects/VisitReportLine__c/fields/OtherPOSVisibility__c.field-meta.xml
<CustomField>
    <fullName>OtherPOSVisibility__c</fullName>
    <label>Other POS Visibility</label>
    <length>255</length>
    <type>Text</type>
</CustomField>