force-app/main/default/objects/VisitReportLine__c/fields/POSMaterialNeeded__c.field-meta.xml
<CustomField>
    <fullName>POSMaterialNeeded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>POS Material Needed</label>
    <type>Checkbox</type>
</CustomField>