force-app/main/default/objects/VisitReportLine__c/fields/RequiredPOSMaterial__c.field-meta.xml
<CustomField>
    <fullName>RequiredPOSMaterial__c</fullName>
    <label>Required POS Material</label>
    <type>TextArea</type>
</CustomField>