force-app/main/default/objects/VisitReportLine__c/fields/TeaInDisplay__c.field-meta.xml
<CustomField>
    <fullName>TeaInDisplay__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tea in Display</label>
    <type>Checkbox</type>
</CustomField>