force-app/main/default/objects/VisitReportLine__c/fields/Topic__c.field-meta.xml
<CustomField>
    <fullName>Topic__c</fullName>
    <label>Topic</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New Customer Visit</fullName>
            </value>
            <value>
                <fullName>Existing Customer Visit</fullName>
            </value>
            <value>
                <fullName>Proposal Meeting</fullName>
            </value>
            <value>
                <fullName>Tasting / Machine Demonstration</fullName>
            </value>
            <value>
                <fullName>Coffee</fullName>
            </value>
            <value>
                <fullName>Tea</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Matcha</fullName>
            </value>
            <value>
                <fullName>Existing Customer Relationship Management</fullName>
            </value>
            <value>
                <fullName>On-Site Competitor Observation</fullName>
            </value>
            <value>
                <fullName>POS Visibility / Brand Presentation</fullName>
            </value>
            <value>
                <fullName>Contract or Commercial Terms Negotiation</fullName>
            </value>
            <value>
                <fullName>Product Introduction / Assortment Expansion</fullName>
            </value>
            <value>
                <fullName>New Customer Acquisition / First Visit</fullName>
            </value>
            <value>
                <fullName>Complaint Handling / Foreign Object Issue</fullName>
            </value>
            <value>
                <fullName>Sales Decline / Variance Analysis</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>