force-app/main/default/objects/VisitReportLine__c/fields/Visit_Report__c.field-meta.xml
<CustomField>
    <fullName>Visit_Report__c</fullName>
    <label>Visit Report</label>
    <referenceTo>VisitReport__c</referenceTo>
    <relationshipLabel>Visit Report Lines</relationshipLabel>
    <relationshipName>Visit_Report_Lines</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>